--- a/src/assets/i18n/en-US.json
+++ b/src/assets/i18n/en-US.json
@@ -5,334 +5,76 @@
     "vi-VN": "vietnamese"
   },
   "auth": {
-    "title": "Input your email anh password",
-    "login": "Login",
-    "register": "Register",
-    "logout": "Logout",
-    "change-password": "Change",
-    "registration": "Registration",
-    "already-have-an-account": "already have an account?",
-    "donot-have-an-account": "Don't have an account?",
-
-    "login-failed": "Login failed!",
-    "register-failed": "Register is success!"
+    "login": "Log In",
+    "register": "Sign Up",
+    "logout": "Log Out"
   },
   "user": {
-    "user-manage": "User manage",
+    "account": "Account",
     "customer": "Customer",
-    "customer-list": "Customer list",
-    "employee": "Employee",
-    "employee-list": "Employee list",
-    "employee-create": "Create employee",
+    "staff": "Staffs",
+    "staff-new": "New employee",
     "user-info": "User information",
-    "user-delete": "Delete user",
-    "user-info-update": "Update user information",
-    "role": "User role",
+    "role": "User roles",
     "profile": "Profile",
     "avatar": "Avatar",
     "username": "Username",
     "birthdate": "Birthdate",
     "gender": "Gender",
-    "phone-number": "Phone nummber",
-    "email": "Email address",
+    "phone": "Phone nummber",
+    "email": "Email",
     "password": "Password",
-    "password-confirm": "Confirm password",
+    "confirm": "Confirm password",
     "address": "Address",
-    "province": "Provinces",
-    "district": "Districts",
-    "ward": "Wards",
+    "province": "Province",
+    "district": "District",
+    "ward": "Ward",
     "male": "Male",
     "female": "Female",
-    "description": "Description",
-    "choose-file": "Choose file",
-    "user-create": "Create user",
-    "user-update": "Edit user",
-    "create-success": "Create user is success!",
-    "update-success": "Update user is success!",
-    "delete-success": "Delete user is success!",
-    "create-failed": "Create user is failed!",
-    "update-failed": "Update user is failed!",
-    "delete-failed": "Delete user is failed!"
+    "choose-file": "Choose file"
   },
-  "supplier": {
-    "supplier": "Suppliers",
-    "supplier-list": "Suppliers list",
-    "supplier-info-update": "Update supplier information",
-    "supplier-update": "Edit supplier",
-    "supplier-create": "Create supplier",
-    "supplier-info": "Supplier information",
-    "supplier-name": "Supplier name",
-    "change-supplier": "Change supplier",
-    "create-success": "Create supplier is success!",
-    "update-success": "Update supplier is success!",
-    "delete-success": "Delete supplier is success!",
-    "create-failed": "Create supplier is failed!",
-    "update-failed": "Update supplier is failed!",
-    "delete-failed": "Delete supplier is failed!"
+  "verify": {
+    "invalid": {
+      "username": "Invalid username.",
+      "email": "Invalid email address.",
+      "password": "Invalid password.",
+      "confirm": "Invalid password confirm.",
+      "birthday": "Invalid date of birth.",
+      "phone": "Invalid phone number"
+    },
+    "empty": {
+      "username": "Username field cannot be empty.",
+      "password": "Password field cannot be empty.",
+      "confirm": "Confirm Password field cannot be empty.",
+      "email": "Email field cannot be empty.",
+      "phone": "Phone field cannot be empty."
+    },
+    "format": {
+      "username": "Invalid format username.",
+      "email": "Invalid format email address.",
+      "phone": "Invalid format phone number."
+    },
+    "confirm": {
+      "sure": "Are you sure?",
+      "delete": "Do you really to delete? this process can not be undone.",
+      "update": "Are you sure you want to update? Changes will be permanent.",
+      "new": "Confirm saving new data? Once saved, it cannot be reverted.",
+      "has-account": "Have an account?",
+      "not-account": "Do not have an account?"
+    }
   },
-  "order": {
-    "order": "Orders",
-    "order-detail": "Order details",
-    "order-list": "List orders",
-    "order-tracking": "Order tracking",
-    "temporary": "Temporary",
-    "delivery-cost": "Delivery cost",
-    "sale": "Sale",
-    "discount-code": "Coupons"
-  },
-  "product": {
-    "product": "Products",
-    "product-name": "Product name",
-    "product-list": "Products list",
-    "product-update": "Edit product",
-    "product-create": "Create product",
-    "product-detail": "Product details",
-    "product-info": "Product information",
-    "image": "Product images",
-    "width": "Width",
-    "height": "Height",
-    "weight": "Weight",
-    "depth": "Depth",
-    "core": "Core",
-    "CPU": "CPU",
-    "system": "Operating system",
-    "design": "Design",
-    "screen": "Screen",
-    "material": "Product material",
-    "GPU": "GPU",
-    "origin": "Original",
-    "specifications": "Specifications",
-    "camera-selfie": "Camere Selfie",
-    "camera": "Camere",
-    "phone": "Phone",
-    "confirm-delete": "Delete product",
-    "confirm-published": "Update product status",
-    "warranty-time": "Product warranty period",
-    "product-configuration": "Product configuration",
-    "quantity": "Quantity",
-    "remaining-products": "Remaining products",
-    "products-other": "Other",
-    "price": "Price",
-    "original-price": "Original price",
-    "sale-price": "Sale price",
-    "color": "Color",
-    "sold": "Sold",
-    "ram": "RAM",
-    "rom": "ROM",
-    "ram-config": "Ram config",
-    "rom-config": "rom config",
-    "color-config": "color Config",
-    "config": "Configuration",
-    "add-color": "Create color",
-    "edit-color": "Update color config",
-    "add-rom": "Create Rom config",
-    "edit-rom": "Update Rom config",
-    "add-ram": "Create Ram config",
-    "edit-ram": "Update Ram config",
-    "description": "Description",
-    "add-image": "Add image",
-    "create-success": "Create product is success!",
-    "update-success": "Edit product is success!",
-    "delete-success": "Delete product is success!",
-    "create-failed": "Create product is failed!",
-    "update-failed": "Edit product is failed!",
-    "delete-failed": "Delete product is failed!"
-  },
-  "notification": {
-    "notification": "Notification",
-    "notification-list": "Danh sách thông báo",
-    "notification-create": "Thêm thông báo",
-    "invalid-email": "Địa chỉ email là bắt buộc",
-    "invalid-password": "Mật khẩu là bắt buộc",
-    "invalid-confirm": "Mật khẩu xác nhận là bắt buộc",
-    "invalid-username": "Tên người dùng là bắt buộc ",
-    "invalid-birthdate": "Ngày sinh là bắt buộc",
-    "invalid-phone": "Số điện thoại là bắt buộc",
-    "validate-password": "Mật khẩu khác nhận không đúng",
-    "message-to-customer": "Thông báo khách hàng",
-    "confirm-delete": "Bạn có chắc chắn xóa không?",
-    "confirm-update": "Bạn có muốn thay đỗi không?",
-    "confirm-create": "Bạn có muốn tạo không?",
-    "invalid-supplier-name": "Tên nhà cung cấp là bắt buộc.",
-    "invalid-supplier": "Nhà cug cấp là bắc buộc",
-    "invalid-province": "Tỉnh/thành phố là bắt buộc",
-    "invalid-district": "Quận/huyện là bắt buộc",
-    "invalid-ward": "Xã/phường là bắt buộc",
-    "invalid-brand": "Tên thương hiệu là bắc buộc",
-    "invalid-color": "Màu sắc là bắc buộc",
-    "invalid-rom": "ROM là bắc buộc",
-    "invalid-ram": "RAM là bắc buộc",
-    "invalid-product-name": "Tên sản phẩm là bắc buộc",
-    "invalid-product": "Sản phẩm là bắc buộc",
-    "invalid-origin": "Xuất xứ sản phẩm là bắc buộc",
-    "invalid-warranty-time": "Thời gian bảo hành là bắc buộc",
-    "confirm-disabled-coupons": "Vô hiệu hóa mã giảm giá?",
-    "invalid-coupons": "Mã giảm giá là bắc buộc",
-    "invalid-startdate": "Ngày bất đầu là bắc buộc",
-    "invalid-enddate": "Ngày kết thúc là bắc buộc",
-    "invalid-quantity": "Số lượng là bắc buộc",
-    "invalid-discount_value": "Giá trị mã là bắc buộc",
-    "invalid-date": "Định dạng ngày không hợp lệ",
-    "invalid-role": "Vai trò người dùng là bắc buộc",
-    "invalid-noti-title": "Tiêu đề thông báo là bắc buộc",
-    "invalid-noti-content": "Nội dung thông báo là bắc buộc",
-    "update-status-coupons": "Cập nhật trạng thái mã khuyến mãi",
-    "delete-product": "Xác nhận xóa sản phẩm?",
-    "delete-brand": "Xác nhận xóa thương hiệu?",
-    "invalid-shopname": "Tên cửa hàng là bắc buộc"
+  "button": {
+    "save": "Save",
+    "edit": "Edit",
+    "delete": "Delete",
+    "home": "Home",
+    "submit": "Submit"
   },
   "placeholder": {
-    "input-fullname": "Input your fullname",
-    "choose-role": "Choose your role",
-    "input-birthdate": "Input your birthdate",
-    "input-sup-name": "Input supplier name",
-    "input-phone": "Input your phone nummber",
-    "input-sup-phone": "Input supplier phone",
-    "input-email": "Input your email address",
-    "input-password": "Input your password",
-    "input-password-confirm": "Input password confirm",
-    "input-address": "Input your address",
-    "input-sup-address": "Input supplier address",
-    "choose-province": "Choose provinces",
-    "choose-district": "Choose districts",
-    "choose-ward": "Choose wards",
-    "input-des": "Input description",
-    "input-brand": "Input brand name",
-    "input-color": "Input Color config",
-    "input-ram": "Input Ram config",
-    "input-rom": "Nhập cấu hình rom",
-    "input-description": "Input description",
-    "input-product-name": "Input product name",
-    "input-origin": "Input product original",
-    "input-warranty-time": "Input product warranty time",
-    "input-code": "Input discount code",
-    "input-quantity": "Input quantity",
-    "input-discount-value": "Input discount value",
-    "choose-supplier": "Choose supplier",
-    "choose-product": "Choose product",
-    "choose-brand": "Choose brand",
-    "input-system": "Input operating system",
-    "input-core": "Input core",
-    "input-CPU": "Input CPU version",
-    "choose-ram": "Choose Ram config",
-    "choose-rom": "Choose Rom config",
-    "choose-color": "Choose color config",
-    "input-GPU": "Input GPU config",
-    "input-camera": "Input camera config",
-    "input-camera-selfie": "Input camera selfie config",
-    "input-screen": "Input screen config",
-    "input-material": "Input product material",
-    "input-width": "Input width",
-    "input-height": "Input height",
-    "input-depth": "Input depth",
-    "input-weight": "Input quantity",
-    "choose-file": "Choose file",
-    "input-price": "Input product price",
-    "input-sale-price": "Input sale price",
-    "input-banner": "Input banner's name",
-    "input-noti-title": "Input notification's title",
-    "input-noti-content": "Input notification's content",
-    "input-shopname": "Input shop name"
-  },
-  "search": "Search",
-  "account": "Account",
-  "cart": {
-    "cart": "Cart",
-    "add-to-cart": "Add to cart",
-    "select-all": "Select all"
-  },
-  "help": "Help",
-  "home": "Home",
-  "brand": {
-    "brand": "Brands",
-    "brand-list": "Brands list",
-    "brand-update": "Update brand",
-    "brand-add": "Create brand",
-    "brand-delete": "Delete brand",
-    "name": "Brand's name",
-    "published": "Published",
-    "update-status": "Update brand's status",
-    "create-success": "Create brand is success!",
-    "update-success": "Update brand is success!",
-    "delete-success": "Delete brand is success!",
-    "create-failed": "Create brand is failed!",
-    "update-failed": "Update brand is failed!",
-    "delete-failed": "Delete brand is failed!"
-  },
-  "coupons": {
-    "coupons-list": "Coupons list",
-    "coupons-update": "Update coupons",
-    "coupons-delete": "Delete coupons",
-    "start-date": "Start date",
-    "end-date": "End date",
-    "discount-value": "Discount value",
-    "disabled": "Disabled",
-    "used-quantity": "Used quantity",
-    "code": "Code",
-    "coupons-create": "Create coupons",
-    "date": "Release date",
-    "create-success": "Create couponse is success!",
-    "update-success": "Update couponse is success!",
-    "delete-success": "Delete couponse is success!",
-    "create-failed": "Create couponse is failed!",
-    "update-failed": "Update couponse is failed!",
-    "delete-failed": "Delete couponse is failed!"
-  },
-  "save": "Lưu thông tin",
-  "buy": "Chọn mua",
-  "cancel": "Hủy bỏ",
-  "total-amount": "Thành tiền",
-  "id": "ID",
-  "menu": "Tùy chọn",
-  "message": "Tin nhắn",
-  "warehouse": {
-    "warehouse": "Kho hàng",
-    "receipt-edit": "Cập nhật phiếu nhập kho",
-    "receipt-detail": "Thông tin chi tiết phiếu nhập",
-    "receipt-note": "Phiếu nhập kho hàng",
-    "create-receipt-note": "Tạo phiếu nhập kho",
-    "list-receipt-note": "Danh sách phiếu nhập kho",
-    "user": "Người lập phiếu",
-    "create-success": "Thêm phiếu nhập kho thành công!",
-    "update-success": "Cập nhật phiếu nhập kho thành công!",
-    "delete-success": "Xóa phiếu nhập kho thành công!",
-    "create-failed": "Thêm phiếu nhập kho không thành công!",
-    "update-failed": "Cập nhật phiếu nhập kho không thành công!",
-    "delete-failed": "Xóa phiếu nhập kho thành công!"
-  },
-  "banner": {
-    "banner": "Banners",
-    "banner-list": "Banners list",
-    "banner-create": "Create banner",
-    "banner-update": "Edit banner",
-    "banner-delete": "Delete banner",
-    "update-status": "Update banner's status",
-    "image": "Imgae",
-    "name": "banner's name"
-  },
-  "regStaff": "Register Staff",
-
-  "shop-info": "Shop information",
-  "shop-name": "Shop name",
-
-  "edit": "Edit",
-  "add": "Add",
-  "delete": "Delete",
-  "view": "View",
-  "regDate": "Create at",
-  "update": "Update",
-  "ok": "Ok",
-  "publish": "Published",
-  "no.": "ID",
-  "close ": "close",
-  "total-price": "Total price",
-  "pay": "Paying",
-  "file": "File",
-  "choose": "Choose",
-  "upload-image": "Upload file",
-  "clear": "Clear",
-  "status": "Status",
-  "title": "Title",
-  "content": "Content",
-  "published": "Published"
+    "email": "email@address.com",
+    "username": "Enter usernanme",
+    "password": "Enter password",
+    "confirm": "Enter password confirm",
+    "phone": " Enter phone number"
+  }
 }
