--- a/src/assets/i18n/vi-VN.json
+++ b/src/assets/i18n/vi-VN.json
@@ -2,338 +2,57 @@
   "language": {
     "languages": "Ngôn ngữ",
     "en-US": "English",
-    "vi-VN": "Tiếng Việt"
+    "vi-VN": "vietnamese"
   },
   "auth": {
-    "title": "Nhập email và mật khẩu",
     "login": "Đăng nhập",
     "register": "Đăng ký",
-    "logout": "Đăng xuất",
-    "change-password": "Đổi mật khẩu",
-    "registration": "Đăng ký tài khoản",
-    "already-have-an-account": "Bạn đã có tài khoản?",
-    "donot-have-an-account": "Chưa có tài khoản?",
-
-    "login-failed": "Đăng nhập thất bại! Kiểm tra tài khoản và mật khẩu của bạn",
-    "register-failed": "Đăng ký không thành công"
+    "logout": "Đăng xuất"
   },
   "user": {
-    "user-manage": "Quản lý người dùng",
+    "account": "Tài khoản",
     "customer": "Khách hàng",
-    "customer-list": "Danh sách khách hàng",
-    "employee": "Nhân viên",
-    "employee-list": "Danh sách nhân viên",
-    "employee-create": "Thêm nhân viên",
-    "user-info": "Thông tin người dùng",
-    "user-delete": "Xóa người dùng",
-    "user-info-update": "Cập nhật thông tin người dùng",
-    "role": "Vai trò người dùng",
+    "staff": "Nhân viên",
+    "role": "Vai trò",
     "profile": "Thông tin tài khoản",
-    "avatar": "Ảnh đại diện",
-    "username": "Họ & tên",
+    "avatar": "Hình nền",
+    "username": "Họ & Tên",
     "birthdate": "Ngày sinh",
     "gender": "Giới tính",
-    "phone-number": "Số điện thoại",
+    "phone": "Số điện thoại",
     "email": "Email",
     "password": "Mật khẩu",
-    "password-confirm": "Xác nhận mật khẩu",
+    "confirm": "Mật khẩu xác nhận",
     "address": "Địa chỉ",
     "province": "Tỉnh/Thành phố",
-    "district": "Quân/Huyện",
-    "ward": "Xã/Phường",
+    "district": "Quận/huyện",
+    "ward": "Phường/Xã",
     "male": "Nam",
     "female": "Nữ",
-    "description": "Mô tả",
-    "choose-file": "Chọn hình ảnh",
-    "user-create": "Thêm người dùng",
-    "user-update": "Cập nhật người dùng",
-    "create-success": "Thêm người dùng thành công!",
-    "update-success": "Cập nhật người dùng thành công!",
-    "delete-success": "Xóa người dùng thành công!",
-    "create-failed": "Thêm người dùng không thành công!",
-    "update-failed": "Cập nhật người dùng không thành công!",
-    "delete-failed": "Xóa người dùng không thành công!"
+    "choose-file": "Chọn file"
   },
-  "supplier": {
-    "supplier": "Nhà cung cấp",
-    "supplier-list": "Danh sách nhà cung cấp",
-    "supplier-info-update": "Cập nhật thông tin nhà cung cấp",
-    "supplier-update": "Cập nhật nhà cung cấp",
-    "supplier-create": "Thêm nhà cung cấp",
-    "supplier-info": "Thông tin nhà cung cấp",
-    "supplier-name": "Tên nhà cung cấp",
-    "change-supplier": "Thay đỗi nhà cung cấp",
-    "create-success": "Thêm nhà cung cấp thành công!",
-    "update-success": "Cập nhật nhà cung cấp thành công!",
-    "delete-success": "Xóa nhà cung cấp thành công!",
-    "create-failed": "Thêm nhà cung cấp không thành công!",
-    "update-failed": "Cập nhật nhà cung cấp không thành công!",
-    "delete-failed": "Xóa nhà cung cấp không thành công!"
+  "verify": {
+    "invalid": {
+      "username": "Tên sử dụng không hợp lệ..",
+      "email": "Địa chỉ email không hợp lệ.",
+      "password": "Mật khẩu không hợp lệ.",
+      "confirm": "Xác nhận mật khẩu không hợp lệ.",
+      "birthdate": "Ngày sinh không hợp lệ.",
+      "phone": "Số điện thoại không hợp lệ."
+    },
+    "confirm": {
+      "sure": "Are you sure?",
+      "delete": "Do you really to delete? this process can not be undone.",
+      "update": "Are you sure you want to update? Changes will be permanent.",
+      "new": "Confirm saving new data? Once saved, it cannot be reverted."
+    }
   },
-  "order": {
-    "order": "Đơn hàng",
-    "order-detail": "Chi tiết đơn hàng",
-    "order-list": "Danh sách đơn hàng",
-    "order-tracking": "Theo dõi đơn hàng",
-    "temporary": "Tạm tính",
-    "delivery-cost": "Chi phí vận chuyển",
-    "sale": "Khuyến mãi",
-    "discount-code": "Mã giảm giá"
-  },
-  "product": {
-    "product": "Sản phẩm",
-    "product-name": "Tên sản phẩm",
-    "product-list": "Danh sách sản phẩm",
-    "product-update": "Cập nhật sản phẩm",
-    "product-create": "Thêm sản phẩm",
-    "product-detail": "Thông tin chi tiết sản phẩm",
-    "product-info": "Thông tin sản phẩm",
-    "image": "Hình ảnh sản phẩm",
-    "width": "Độ rộng",
-    "height": "Độ cao",
-    "weight": "Trọng lượng",
-    "depth": "Độ dầy",
-    "core": "Số nhân",
-    "CPU": "Phiên bản CPU",
-    "system": "Hệ điều hành",
-    "design": "Thiết kế & Trọng lượng",
-    "screen": "Màn hình",
-    "material": "Chất liệu",
-    "GPU": "Đồ họa GPU",
-    "origin": "Xuất xứ",
-    "specifications": "Thông số kỹ thuật",
-    "camera-selfie": "Camere Selfie",
-    "camera": "Camere sau",
-    "phone": "Điện thoại",
-    "confirm-delete": "Xóa sản sản phẩm",
-    "confirm-published": "Cập nhật trạng thái sản phẩm",
-    "warranty-time": "Thời gian bảo hành",
-    "product-configuration": "Cấu hình sản phẩm",
-    "quantity": "Số lượng",
-    "remaining-products": "Sản phẩm còn lại",
-    "products-other": "Sản phẩm tương tự",
-    "price": "Giá sản phẩm",
-    "original-price": "Giá gốc",
-    "sale-price": "Giá khuyến mãi",
-    "color": "Màu sắc",
-    "sold": "Đã bán",
-    "ram": "RAM",
-    "rom": "ROM",
-    "ram-config": "Cấu hình RAM",
-    "rom-config": "Cấu hình ROM",
-    "color-config": "Cấu hình màu sắc",
-    "config": "Cấu hình",
-    "add-color": "Thêm màu sắc",
-    "edit-color": "Cập nhật màu sắc",
-    "add-rom": "Thêm cấu hình ROM",
-    "edit-rom": "Cập nhật cấu hình ROM",
-    "add-ram": "Thêm cấu hình RAM",
-    "edit-ram": "Cập nhật cấu hình RAM",
-    "description": "Mô tả sản phẩm",
-    "add-image": "Thêm hình ảnh sản phẩm",
-    "create-success": "Thêm sản phẩm thành công!",
-    "update-success": "Cập sản phẩm cấp thành công!",
-    "delete-success": "Xóa sản phẩm thành công!",
-    "create-failed": "Thêm sản phẩm không thành công!",
-    "update-failed": "Cập nhật sản phẩm không thành công!",
-    "delete-failed": "Xóa sản phẩm không thành công!"
-  },
-  "notification": {
-    "notification": "Thông báo",
-    "notification-list": "Danh sách thông báo",
-    "notification-create": "Thêm thông báo",
-    "invalid-email": "Địa chỉ email là bắt buộc",
-    "invalid-password": "Mật khẩu là bắt buộc",
-    "invalid-confirm": "Mật khẩu xác nhận là bắt buộc",
-    "invalid-username": "Tên người dùng là bắt buộc ",
-    "invalid-birthdate": "Ngày sinh là bắt buộc",
-    "invalid-phone": "Số điện thoại là bắt buộc",
-    "input-sup-phone": "Nhập số điện thoại nhà cung cấp",
-    "validate-password": "Mật khẩu khác nhận không đúng",
-    "message-to-customer": "Thông báo khách hàng",
-    "confirm-delete": "Bạn có chắc chắn xóa không?",
-    "confirm-update": "Bạn có muốn thay đỗi không?",
-    "confirm-create": "Bạn có muốn tạo không?",
-    "invalid-supplier-name": "Tên nhà cung cấp là bắt buộc.",
-    "invalid-supplier": "Nhà cug cấp là bắc buộc",
-    "invalid-province": "Tỉnh/thành phố là bắt buộc",
-    "invalid-district": "Quận/huyện là bắt buộc",
-    "invalid-ward": "Xã/phường là bắt buộc",
-    "invalid-brand": "Tên thương hiệu là bắc buộc",
-    "invalid-color": "Màu sắc là bắc buộc",
-    "invalid-rom": "ROM là bắc buộc",
-    "invalid-ram": "RAM là bắc buộc",
-    "invalid-product-name": "Tên sản phẩm là bắc buộc",
-    "invalid-product": "Sản phẩm là bắc buộc",
-    "invalid-origin": "Xuất xứ sản phẩm là bắc buộc",
-    "invalid-warranty-time": "Thời gian bảo hành là bắc buộc",
-    "confirm-disabled-coupons": "Vô hiệu hóa mã giảm giá?",
-    "invalid-coupons": "Mã giảm giá là bắc buộc",
-    "invalid-startdate": "Ngày bất đầu là bắc buộc",
-    "invalid-enddate": "Ngày kết thúc là bắc buộc",
-    "invalid-quantity": "Số lượng là bắc buộc",
-    "invalid-discount_value": "Giá trị mã là bắc buộc",
-    "invalid-date": "Định dạng ngày không hợp lệ",
-    "invalid-role": "Vai trò người dùng là bắc buộc",
-    "invalid-noti-title": "Tiêu đề thông báo là bắc buộc",
-    "invalid-noti-content": "Nội dung thông báo là bắc buộc",
-    "update-status-coupons": "Cập nhật trạng thái mã khuyến mãi",
-    "delete-product": "Xác nhận xóa sản phẩm?",
-    "delete-brand": "Xác nhận xóa thương hiệu?",
-    "invalid-shopname": "Tên cửa hàng là bắc buộc"
-  },
-  "placeholder": {
-    "input-fullname": "Nhập họ tên người dùng",
-    "choose-role": "Chọn vai trò người dùng",
-    "input-birthdate": "Nhập ngày sinh",
-    "input-sup-name": "Nhập tên nhà cung cấp",
-    "input-phone": "Nhập số điện thoại",
-    "input-email": "Nhập địa chỉ mail",
-    "input-password": "Nhập mật khẩu của bạn",
-    "input-password-confirm": "Nhập mật khẩu xác nhận",
-    "input-address": "Nhập địa chỉ",
-    "input-sup-address": "Nhập địa chỉ nhà cung cấp",
-    "choose-province": "Chọn tỉnh/thành phố",
-    "choose-district": "Chọn quận/huyện",
-    "choose-ward": "Chọn phường/xã",
-    "input-des": "Nhập mô tả",
-    "input-brand": "Nhập tên thương hiệu",
-    "input-color": "Nhập cấu hình màu sắc",
-    "input-ram": "Nhập cấu hình ram",
-    "input-rom": "Nhập cấu hình rom",
-    "input-description": "Nhập mô tả sản phẩm",
-    "input-product-name": "Nhập tên sản phẩm ",
-    "input-origin": "Nhập xuất xứ sản phẩm",
-    "input-warranty-time": "Nhập thời gian bảo hành sản phẩm",
-    "input-code": "Nhâp mã giảm giá",
-    "input-quantity": "Nhập số lượng",
-    "input-discount-value": "Nhập giá trị",
-    "choose-supplier": "Chọn nhà cung cấp",
-    "choose-product": "Chọn sản phẩm",
-    "choose-brand": "Chọn thương hiệu",
-    "input-system": "Nhập hệ điều hành",
-    "input-core": "Nhập số nhân",
-    "input-CPU": "Nhập phiên bản CPU",
-    "choose-ram": "Chọn dung lượng Ram",
-    "choose-rom": "Chọn dung lượng Rom",
-    "choose-color": "Chọn màu sắc",
-    "input-GPU": "Nhập thông tin bộ xử lý đồ họa",
-    "input-camera": "Nhập thông số camera sau",
-    "input-camera-selfie": "Nhập thông số camera selfie",
-    "input-screen": "Nhâp thông sô màn hình",
-    "input-material": "Nhập chất liệu sản phẩm",
-    "input-width": "Nhập độ rộng màn hình",
-    "input-height": "Nhập độ cao màn hình",
-    "input-depth": "Nhập độ dầy sản phẩm",
-    "input-weight": "Nhập trọng lượng sản phẩm",
-    "choose-file": "Chọn hình ảnh",
-    "input-price": "Nhập giá sản phẩm",
-    "input-sale-price": "Nhập giá giảm",
-    "input-banner": "Nhập tên banner",
-    "input-noti-title": "Nhập tiêu đề thông báo",
-    "input-noti-content": "Nhập nội dung thông báo",
-    "input-shopname": "Nhập tên cửa hàng"
-  },
-  "search": "Tìm kiếm",
-  "account": "Tài khoản",
-  "cart": {
-    "cart": "Giỏ hàng",
-    "add-to-cart": "Thêm vào giỏ hàng",
-    "select-all": "Chọn tất cả"
-  },
-  "help": "Trợ giúp",
-  "home": "Trang chủ",
-  "brand": {
-    "brand": "Thương hiệu",
-    "brand-list": "Danh sách thương hiệu",
-    "brand-update": "Cập nhật thương hiệu",
-    "brand-add": "Thêm thương hiệu",
-    "brand-delete": "Xóa thương hiệu",
-    "name": "Tên thương hiệu",
-    "published": "Hiển thị",
-    "update-status": "Cập nhật trạng thái thương hiệu",
-    "create-success": "Thêm thương hiệu thành công!",
-    "update-success": "Cập nhật thương hiệu thành công!",
-    "delete-success": "Xóa thương hiệu thành công!",
-    "create-failed": "Thêm thương hiệu không thành công!",
-    "update-failed": "Cập nhật thương hiệu không thành công!",
-    "delete-failed": "Xóa thương hiệu thành công!"
-  },
-  "coupons": {
-    "coupons-list": "Danh sách mã giảm giá",
-    "coupons-update": "Cập nhật mã giảm giá",
-    "coupons-delete": "Xóa mã",
-    "start-date": "Ngày bất đầu",
-    "end-date": "Ngày kết thúc",
-    "discount-value": "Trị giá",
-    "disabled": "Vô hiệu",
-    "used-quantity": "Đã sử dụng",
-    "code": "Mã giảm giá",
-    "coupons-create": "Thêm mã giảm giá",
-    "date": "Ngày áp dụng",
-    "create-success": "Tạo mã giảm giá thành công!",
-    "update-success": "Cập nhật mã giảm giá thành công!",
-    "delete-success": "Xóa mã giảm giá thành công!",
-    "create-failed": "Thêm mã giảm giá không thành công!",
-    "update-failed": "Cập nhật mã giảm giá không thành công!",
-    "delete-failed": "Xóa mã giảm giá thành công!"
-  },
-  "save": "Lưu thông tin",
-  "buy": "Chọn mua",
-  "cancel": "Hủy bỏ",
-  "total-amount": "Thành tiền",
-  "id": "ID",
-  "menu": "Tùy chọn",
-  "message": "Tin nhắn",
-  "warehouse": {
-    "warehouse": "Kho hàng",
-    "receipt-edit": "Cập nhật phiếu nhập kho",
-    "receipt-detail": "Thông tin chi tiết phiếu nhập",
-    "receipt-note": "Phiếu nhập kho hàng",
-    "create-receipt-note": "Tạo phiếu nhập kho",
-    "list-receipt-note": "Danh sách phiếu nhập kho",
-    "user": "Người lập phiếu",
-    "create-success": "Thêm phiếu nhập kho thành công!",
-    "update-success": "Cập nhật phiếu nhập kho thành công!",
-    "delete-success": "Xóa phiếu nhập kho thành công!",
-    "create-failed": "Thêm phiếu nhập kho không thành công!",
-    "update-failed": "Cập nhật phiếu nhập kho không thành công!",
-    "delete-failed": "Xóa phiếu nhập kho thành công!"
-  },
-  "banner": {
-    "banner": "Banner trang chủ",
-    "banner-list": "Danh sách banners",
-    "banner-create": "Thêm banner",
-    "banner-update": "Chĩnh sửa banner",
-    "banner-delete": "Xóa banner",
-    "update-status": "Cập nhật trạng thái banner",
-    "image": "Ảnh banner",
-    "name": "Tên banner"
-  },
-  "regStaff": "Người tạo",
-
-  "shop-info": "Thông tin cửa hàng",
-  "shop-name": "Tên cửa hàng",
-
-  "edit": "Chỉnh sửa",
-  "add": "Tạo mới",
-  "delete": "Xóa",
-  "view": "Xem",
-  "regDate": "Ngày tạo",
-  "update": "Cập nhật",
-  "ok": "Đồng ý",
-  "publish": "Hiển thị",
-  "change-password": "Đỗi mật khẩu",
-  "no.": "ID",
-  "close ": "Đống",
-  "total-price": "Tổng tiền",
-  "pay": "Thanh toán",
-  "file": "tập tin",
-  "choose": "Chọn",
-  "upload-image": "Tải ảnh lên",
-  "clear": "Làm mới",
-  "status": "Trạng thái",
-  "title": "Tiêu đề",
-  "content": "Nội dung",
-  "published": "Hiển thị"
+  "button": {
+    "save": "Save",
+    "edit": "Edit",
+    "delete": "Delete",
+    "home": "Trang chủ",
+    "help": "Trợ giúp",
+    "submit": "Gửi"
+  }
 }
